--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</div>
 		<div class="video-container">
             <video autoplay loop muted>
-            	<source src="assets/img/video-latest.mp4">
+            	<source src="assets/img/fge-video.mp4">
             </video>
         </div>
 	</section>
@@ -238,6 +238,7 @@
 				
 				<div class="footer__nav flex-2">
 					<a href="mailto:info@fgeinteractive.com">Contact</a>
+					<a href="privacy.html">Privacy</a>
 				</div>
 			</div>
 			<div class="footer__logo">
