--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="button__explore button__explore-black">
 				<p>Explore More</p>
 				<div class="font-icons font-icons__black">
-					<a data-scroll href="#footer">
+					<a data-scroll href="#footer-title">
 						<i class="fas fa-sort-down"></i>
 					</a>
 				</div>
@@ -196,7 +196,7 @@
           </div>
 		<div class="container">
 
-			<div class="footer__title center-text">
+			<div class="footer__title center-text" id="footer-title">
 				<h4>Do you want to sign up for our newsletter?</h4>
 			</div>
 
