--- a/index.html
+++ b/index.html
@@ -138,42 +138,42 @@
 					<a href="#">
 						<img src="assets/img/gurcan.jpg" alt="Gürcan Serbest" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">Gürcan Serbest</p>
+					<p class="team__desc-title pt-sm">Gürcan Serbest</p>
 					<p class="team__desc">Game Developer</p>
 				</div>
 				<div class="team__member">
 					<a href="#">
 						<img src="assets/img/wizard-2.png" alt="Etkin Doğan" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">Etkin Doğan</p>
+					<p class="team__desc-title pt-sm">Etkin Doğan</p>
 					<p class="team__desc">Visualisation/VFX</p>
 				</div>
 				<div class="team__member">
 					<a href="#">
 						<img src="assets/img/wizard-3.png" alt="Ferhat Kovancı" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">Ferhat Kovancı</p>
+					<p class="team__desc-title pt-sm">Ferhat Kovancı</p>
 					<p class="team__desc">3D Modeler</p>
 				</div>
 				<div class="team__member">
 					<a href="#">
 						<img src="assets/img/wizard-4.png" alt="Serdar Çelik" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">Serdar Çelik</p>
+					<p class="team__desc-title pt-sm">Serdar Çelik</p>
 					<p class="team__desc">Sound Engineer</p>
 				</div>
 				<div class="team__member">
 					<a href="#">
 						<img src="assets/img/wizard-5.png" alt="Nadir Seven" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">Nadir Seven</p>
+					<p class="team__desc-title pt-sm">Nadir Seven</p>
 					<p class="team__desc">3D Animator</p>
 				</div>
 				<div class="team__member">
 					<a href="#">
 						<img src="assets/img/wizard-6.jpg" alt="MH Bijoy" class="img-fluid">
 					</a>
-					<p class="team__desc pt-sm">MH Bijoy</p>
+					<p class="team__desc-title pt-sm">MH Bijoy</p>
 					<p class="team__desc">Web Designer</p>
 				</div>
 			</div>
